--- a/v2/index.html
+++ b/v2/index.html
@@ -107,7 +107,7 @@
   </div>
   <section id="about" class="container light">
     <div class="content">
-      <h2 class="text-center">Our Clients</h2>
+      <h2 class="">Our Clients</h2>
       <p class="clients-description text-3">
         At ONX Software, we collaborate with visionary organizations across diverse industries, from innovative startups to established enterprises.
       </p>
@@ -133,7 +133,7 @@
       </div>
     </div>
     <div class="content">
-      <h1 class="text-center">About Us</h1>
+      <h1 class="">About Us</h1>
       <div class="about-content">
         <p>Founded with an innovative spirit and an audacious goal: to empower businesses of all sizes with software, design, web, and mobile application solutions. From fledgling startups to established enterprises, we provide a full spectrum of services tailored to each client's unique needs.</p>
         
@@ -146,61 +146,51 @@
         <p>Join us, let's shape the future of your business together!</p>
       </div>
       
-      <h2 class="text-center">What Sets Us Apart</h2>
-      <div class="features-grid">
-        <div class="feature-item">
-          <h3>Full-Spectrum Services</h3>
-          <p>From ideation to ongoing support, we cover every stage of your project's lifecycle.</p>
+      <div class=features-box>
+        <div class="features-image">
+          <svg width="591" height="755" viewBox="0 0 591 755" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g opacity="0.5">
+            <path d="M0.64064 0H-152.262L50.8604 311.986L-203 754.137H-46.1278L204.109 313.363" fill="#CCC5B8"/>
+            <path d="M387.038 754.137H539.877L336.84 442.152L590.593 0H433.787L183.484 440.947" fill="#CCC5B8"/>
+            </g>
+          </svg>            
         </div>
-        <div class="feature-item">
-          <h3>Tailored Solutions</h3>
-          <p>We craft bespoke solutions that align perfectly with your unique business needs.</p>
-        </div>
-        <div class="feature-item">
-          <h3>Diverse Expertise</h3>
-          <p>Our team excels in software, design, web, and mobile application development.</p>
-        </div>
-        <div class="feature-item">
-          <h3>Future-Focused Approach</h3>
-          <p>We don't just solve today's problems; we prepare you for tomorrow's challenges.</p>
-        </div>
-        <div class="feature-item">
-          <h3>Flexible Engagement</h3>
-          <p>From project-based work to product partnerships, we adapt to your preferred collaboration model.</p>
-        </div>
-        <div class="feature-item">
-          <h3>Committed Partnership</h3>
-          <p>We're not just service providers; we're dedicated partners in your success journey.</p>
-        </div>
-      </div>
-    </div>
-    <div class="content">
-      <h2 class="text-center">Our Partners</h2>
-      <div class="partners-grid">
-        <div class="partner-item">
-          <img src="./assets/img/voya.svg" alt="VOYA Logo" class="partner-logo">
-          <!-- <h3>VOYA</h3> -->
-          <h5>Design Partner</h5>
-          <p>Collaborating to create stunning visual experiences</p>
-        </div>
-        <div class="partner-item">
-          <img src="./assets/img/wext.png" alt="WEXT Logo" class="partner-logo">
-          <!-- <h3>WEXT</h3> -->
-          <h5>Educational Content Partner</h5>
-          <p>Enhancing learning through innovative content solutions</p>
-        </div>
-        <div class="partner-item">
-          <img src="./assets/img/microsoft-fh.png" alt="Microsoft Founders Hub Logo" class="partner-logo">
-          <!-- <h3>Microsoft Founders Hub</h3> -->
-          <h5>Technology Partner</h5>
-          <p>Empowering startups with cutting-edge Microsoft technologies</p>
+        <div class=features-content>
+          <h2 class="">What Sets Us Apart</h2>
+          <div class="features-grid">
+            <div class="feature-item">
+              <h4>Full-Spectrum Services</h4>
+              <p>From ideation to ongoing support, we cover every stage of your project's lifecycle.</p>
+            </div>
+            <div class="feature-item">
+              <h4>Tailored Solutions</h4>
+              <p>We craft bespoke solutions that align perfectly with your unique business needs.</p>
+            </div>
+            <div class="feature-item">
+              <h4>Diverse Expertise</h4>
+              <p>Our team excels in software, design, web, and mobile application development.</p>
+            </div>
+            <div class="feature-item">
+              <h4>Future-Focused Approach</h4>
+              <p>We don't just solve today's problems; we prepare you for tomorrow's challenges.</p>
+            </div>
+            <div class="feature-item">
+              <h4>Flexible Engagement</h4>
+              <p>From project-based work to product partnerships, we adapt to your preferred collaboration model.</p>
+            </div>
+            <div class="feature-item">
+              <h4>Committed Partnership</h4>
+              <p>We're not just service providers; we're dedicated partners in your success journey.</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
   <section id="services" class="container h-100">
     <div class="content">
-      <h1 class="text-center">Services</h1>
+      <h1 class="">Services</h1>
+      <p class="text-3">At ONX Software, we collaborate with visionary organizations across diverse industries, from innovative startups to established enterprises.</p>
       <div class="service-cards">
         <div class="service-card">
           <h3>Software Development</h3>
@@ -251,7 +241,7 @@
   </section>
   <section id="products" class="container light">
     <div class="content">
-      <h2 class="text-center">Our Products</h2>
+      <h2 class="">Our Products</h2>
       <p class="text-3">
         We develop and support a range of products to meet the diverse needs of our clients and partners.
       </p>
@@ -282,9 +272,32 @@
         </div>
       </div>
     </div>
+    <div class="content">
+      <h2 class="text-center">Our Partners</h2>
+      <div class="partners-grid">
+        <div class="partner-item">
+          <img src="./assets/img/voya.svg" alt="VOYA Logo" class="partner-logo">
+          <!-- <h3>VOYA</h3> -->
+          <h5>Design Partner</h5>
+          <p>Collaborating to create stunning visual experiences</p>
+        </div>
+        <div class="partner-item">
+          <img src="./assets/img/wext.png" alt="WEXT Logo" class="partner-logo">
+          <!-- <h3>WEXT</h3> -->
+          <h5>Educational Content Partner</h5>
+          <p>Enhancing learning through innovative content solutions</p>
+        </div>
+        <div class="partner-item">
+          <img src="./assets/img/microsoft-fh.png" alt="Microsoft Founders Hub Logo" class="partner-logo">
+          <!-- <h3>Microsoft Founders Hub</h3> -->
+          <h5>Technology Partner</h5>
+          <p>Empowering startups with cutting-edge Microsoft technologies</p>
+        </div>
+      </div>
+    </div>
   </section>
   <section class="container h-100" id="contact">
-    <div class="content">
+    <div class="content align-center">
       <h2 class="text-center contact-title">Let's Take the First Step to Shape the Future of Your Business</h2>
       <p class="text-center contact-description">We're here to help you turn your ideas into reality. Whether you're an investor, an aspiring entrepreneur, or a seasoned team looking to optimize your operations, we're here to turn your ideas into reality.</p>
       <a href="https://calendly.com/onxsoftware/30min" target="_blank" class="contact js-contact">
