--- a/v2/index.html
+++ b/v2/index.html
@@ -208,10 +208,10 @@
           <h3>Educational Technologies</h3>
           <p>Innovative tools to enhance learning and teaching processes</p>
         </div>
-        <div class="service-card">
+        <!-- <div class="service-card">
           <h3>Game Development</h3>
           <p>Engaging and interactive games for various platforms</p>
-        </div>
+        </div> -->
         <div class="service-card">
           <h3>MVP Development</h3>
           <p>Rapid prototyping to validate your product ideas</p>
@@ -247,25 +247,34 @@
       </p>
       <div class="product-showcase">
         <div class="product-card">
-          <div class="product-icon">
-            <i class="fas fa-pencil-ruler"></i>
-          </div>
+          <svg width="204" height="290" viewBox="0 0 204 290" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g opacity="0.15">
+            <path d="M78.002 0H19.4344L97.238 119.916L0 289.863H60.0879L155.938 120.445" fill="#CCC5B8"/>
+            <path d="M226.007 289.863H284.549L206.779 169.947L303.976 0H243.913L148.038 169.484" fill="#CCC5B8"/>
+            </g>
+          </svg>            
           <h3>ONX<br><span>Creator</span></h3>
           <p>Empower your content creation with our intuitive authoring tool.</p>
-          <a class="product-link">See details</a>
+          <a class="product-link">See details</a>          
         </div>
         <div class="product-card">
-          <div class="product-icon">
-            <i class="fas fa-chalkboard-teacher"></i>
-          </div>
+          <svg width="204" height="290" viewBox="0 0 204 290" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g opacity="0.15">
+            <path d="M78.002 0H19.4344L97.238 119.916L0 289.863H60.0879L155.938 120.445" fill="#CCC5B8"/>
+            <path d="M226.007 289.863H284.549L206.779 169.947L303.976 0H243.913L148.038 169.484" fill="#CCC5B8"/>
+            </g>
+          </svg>
           <h3>ONX<br><span>Plus</span></h3>
           <p>Revolutionize your educational experience with our comprehensive LMS.</p>
           <a class="product-link product-link-disabled">Coming soon...</a>
         </div>
         <div class="product-card">
-          <div class="product-icon">
-            <i class="fas fa-user-clock"></i>
-          </div>
+          <svg width="204" height="290" viewBox="0 0 204 290" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g opacity="0.15">
+            <path d="M78.002 0H19.4344L97.238 119.916L0 289.863H60.0879L155.938 120.445" fill="#CCC5B8"/>
+            <path d="M226.007 289.863H284.549L206.779 169.947L303.976 0H243.913L148.038 169.484" fill="#CCC5B8"/>
+            </g>
+          </svg>    
           <h3>ONX<br><span>Numarator</span></h3>
           <p>Streamline patient flow and enhance healthcare efficiency.</p>
           <a href="mailto:info@onxsoftware.com" class="product-link">Get Contact</a>
@@ -273,22 +282,29 @@
       </div>
     </div>
     <div class="content">
-      <h2 class="text-center">Our Partners</h2>
+      <h2 class="">Our Partners</h2>
+      <p class="text-3">We collaborate with industry professionals to deliver comprehensive, innovative solutions and enhance our product offerings</p>
       <div class="partners-grid">
         <div class="partner-item">
-          <img src="./assets/img/voya.svg" alt="VOYA Logo" class="partner-logo">
+          <div class="partner-logo-box">
+            <img width="184" height="35" src="./assets/img/voya.svg" alt="VOYA Logo" class="partner-logo">
+          </div>
           <!-- <h3>VOYA</h3> -->
           <h5>Design Partner</h5>
           <p>Collaborating to create stunning visual experiences</p>
         </div>
         <div class="partner-item">
-          <img src="./assets/img/wext.png" alt="WEXT Logo" class="partner-logo">
+          <div class="partner-logo-box">
+            <img width="148" height="37" src="./assets/img/wext.png" alt="WEXT Logo" class="partner-logo">
+          </div>
           <!-- <h3>WEXT</h3> -->
           <h5>Educational Content Partner</h5>
           <p>Enhancing learning through innovative content solutions</p>
         </div>
         <div class="partner-item">
-          <img src="./assets/img/microsoft-fh.png" alt="Microsoft Founders Hub Logo" class="partner-logo">
+          <div class="partner-logo-box">
+            <img width="119" height="56" src="./assets/img/microsoft-fh.png" alt="Microsoft Founders Hub Logo" class="partner-logo">
+          </div>
           <!-- <h3>Microsoft Founders Hub</h3> -->
           <h5>Technology Partner</h5>
           <p>Empowering startups with cutting-edge Microsoft technologies</p>
@@ -322,13 +338,13 @@
         <div class="footer-top">
           <div></div>
           <div class="socials">
-            <a href="https://www.linkedin.com/company/onxsoftware" target="_blank" class="social-item">
+            <a href="https://www.linkedin.com/company/onxsoftware" target="_blank" class="social-item underlineThrough">
               LinkedIn
             </a>
-            <a href="https://instagram.com/onxsoftware" target="_blank" class="social-item">
+            <a href="https://instagram.com/onxsoftware" target="_blank" class="social-item underlineThrough">
               Instagram
             </a>
-            <a href="https://twitter.com/onxsoftware" target="_blank" class="social-item">
+            <a href="https://twitter.com/onxsoftware" target="_blank" class="social-item underlineThrough">
               X (Twitter)
             </a>
           </div>
