--- a/creator/404.html
+++ b/creator/404.html
@@ -100,7 +100,7 @@
 					</div><!-- End Col -->		
 
 					<div class="col-30 right-col align-self-center text-end">
-						<a href="#" class="white-btn bt">
+						<a href="mailto:info@onx.software?subject=JOIN WAITLIST&body=Hi, I would like to join the waitlist" class="white-btn bt">
 							Join Waitlist
 						</a>
 					</div><!-- End Col -->
