--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
         </div>
         <div class="footer-bottom">
           <div class="address">
-            Maslak Mah. AOS 55. Sk. 42 Maslak Plaza B Blok No: 4/542 Sarıyer İstanbul
+            Maslak Mah. AOS 55. Sk. 42 Maslak Plaza B Blok No: 4/542 Sariyer Istanbul Turkiye
           </div>
           <!-- <a href="mailto:info@onxsoftware.com" class="email-box">
             info@onxsoftware.com
