--- a/barometer/index.html
+++ b/barometer/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/barometer.loader.js";
+      var loaderUrl = buildUrl + "/barometer.1.loader.js";
       var config = {
-        dataUrl: buildUrl + "/barometer.data.gz",
-        frameworkUrl: buildUrl + "/barometer.framework.js.gz",
-        codeUrl: buildUrl + "/barometer.wasm.gz",
+        dataUrl: buildUrl + "/barometer.1.data",
+        frameworkUrl: buildUrl + "/barometer.1.framework.js",
+        codeUrl: buildUrl + "/barometer.1.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "barometer",
